--- a/WeatherOrNot/templates/addfavs_page.html
+++ b/WeatherOrNot/templates/addfavs_page.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="shortcut icon" href="http://www.free-icons-download.net/images/sun-icon-47359.png">
     <script src="/static/addfavs_page.js"></script>
     <title>Wardrobe</title>
     <link rel="stylesheet" href="/static/style.css"></link>
@@ -9,18 +10,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body class="body" background="https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/D8qa-2E/rainy-stormy-darkness-wet-weather-background-depressed-sad-background_bzxjr4x7h__F0000.png">
+  <body class="body" background="{{background_url}}">
     <nav class="navbar navbar-inverse">
       <ul class = "nav navbar-nav">
         <li><h1 id="headerz">Weather or Not</h1></li>
       </ul>
       <ul class="nav navbar-nav">
         <li id="nav"><a href="/">Home</a></li>
-        <li id="nav"><a href="/wardrobe">Wardrobe</a></li>
+        <li id="nav"><a href="/add_favorite">Wardrobe</a></li>
         <li id="nav"><a href="/add_item">Add to Wardrobe</a></li>
         <li id="nav"><a href="/suggestion">Suggestions</a></li>
-        <li id="nav"><a href="/add_favorite">Add Favorite Outfits</a></li>
-        <li id="nav"><a href="/list_favorite">Favorites!</a></li>
+        <li id="nav"><a href="/laundry">Laundry</a></li>
+        <li id="nav"><a href="/list_favorite">Favorites</a></li>
         <li id="nav"><a href="/calendar">History</a></li>
         <li><a href="http://twitter.com/?status=My outfit is faab!"><img class="img2" src="http://www.anthonysgulfport.com/wp-content/uploads/2014/09/twitter-icon-300x300.png" id="twitter"/></a></li>
         <li><a href="https://www.facebook.com/share.php?u="><img class="img2" src="https://seeklogo.com/images/F/facebook-icon-logo-C61047A9E7-seeklogo.com.png" id="facebook"/></a></li>
@@ -34,9 +35,12 @@
     </div>
 
 <form method="post">
-<button id ="submit">Submit!</button>
+<button id ="submit">Add to Favorites!</button>
 <button id = "worn"> I wore this today! </button>
-      <p>Tops:</p>
+<input type = "submit" value="Send to Laundry" name="laundry">
+<input type = "submit" value = "Delete" name="delete">
+<div id = "portraitbox">
+    <p>Tops:</p>
       <div>
         {% for top in topsWardrobe %}
           <img class = "img" src = "{{top.url}}" />
@@ -44,10 +48,16 @@
         <p></p>
       {% for top in topsWardrobe %}
         <input type="radio" name="topForm" id="tops" value="{{top.url}}"/>
-        <label for="tops">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
+        <label class = "btns" for="tops">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
+      {% endfor %}
+      <p></p>
+      {% for top in topsWardrobe %}
+        <input type="checkbox" id="myCheck" name="{{top.key.urlsafe()}}"/>
+        <label class = "btns" for="myCheck">Select Item&emsp; &emsp; &emsp; &ensp; &ensp; &ensp; &emsp; &emsp; &emsp;</label>
       {% endfor %}
       <br /><br />
     </div>
+  </div>
 
     <p>Bottoms:</p>
     <div>
@@ -57,8 +67,13 @@
       <p></p>
     {% for pant in pantsWardrobe %}
       <input type="radio" name="bottomForm" id="bottoms" value="{{pant.url}}"/>
-      <label for="bottoms">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
+      <label class = "btns" for="bottoms">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
     {% endfor %}
+    <p></p>
+  {% for pant in pantsWardrobe %}
+    <input type="checkbox" name="{{pant.key.urlsafe()}}" id="myCheck"/>
+    <label class = "btns" for="myCheck">Select Item&emsp; &emsp; &emsp; &ensp; &ensp; &ensp; &emsp; &emsp; &emsp;</label>
+  {% endfor %}
     <br /><br />
     </div>
 
@@ -70,8 +85,13 @@
       <p> </p>
     {% for skirt in skirtWardrobe %}
     <input type="radio" name="skirtForm" id="skirts" value="{{skirt.url}}"/>
-    <label for="skirts">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
+    <label class = "btns" for="skirts">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
     {% endfor %}
+    <p></p>
+  {% for skirt in skirtWardrobe %}
+    <input type="checkbox" name="{{skirt.key.urlsafe()}}" id="myCheck"/>
+    <label class = "btns" for="myCheck">Select Item&emsp; &emsp; &emsp; &ensp; &ensp; &ensp; &emsp; &emsp; &emsp;</label>
+  {% endfor %}
     <br /><br />
     </div>
 
@@ -83,7 +103,12 @@
       <p> </p>
     {% for sweater in sweaterWardrobe %}
     <input type="radio" name="sweaterForm" id="sweaters" value="{{sweater.url}}"/>
-    <label for="sweaters">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    <label class = "btns" for="sweaters">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    {% endfor %}
+    <p></p>
+    {% for sweater in sweaterWardrobe %}
+      <input type="checkbox" name="{{sweater.key.urlsafe()}}" id="myCheck"/>
+      <label class = "btns" for="myCheck">Select Item&emsp; &emsp; &emsp; &ensp; &ensp; &ensp; &emsp; &emsp; &emsp;</label>
     {% endfor %}
     <br /><br />
     </div>
@@ -96,7 +121,12 @@
       <p> </p>
     {% for coat in coatWardrobe %}
     <input type="radio" name="coatForm" id="coats" value="{{coat.url}}"/>
-    <label for="coats">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    <label class = "btns" for="coats">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    {% endfor %}
+    <p></p>
+    {% for coat in coatWardrobe %}
+    <input type="checkbox" name="{{coat.key.urlsafe()}}" id="myCheck"/>
+    <label class = "btns" for="myCheck">Select Item&emsp; &emsp; &emsp; &ensp; &ensp; &ensp; &emsp; &emsp; &emsp;</label>
     {% endfor %}
     <br /><br />
     </div>
@@ -109,11 +139,16 @@
       <p> </p>
     {% for jacket in jacketWardrobe %}
     <input type="radio" name="jacketForm" id="jackets" value="{{jacket.url}}"/>
-    <label for="jackets">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    <label class = "btns" for="jackets">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    {% endfor %}
+    <p></p>
+    {% for jacket in jacketWardrobe %}
+    <input type="checkbox" name="{{jacket.key.urlsafe()}}" id="myCheck"/>
+    <label class = "btns" for="myCheck">Select Item&emsp; &emsp; &emsp; &ensp; &ensp; &ensp; &emsp; &emsp; &emsp;</label>
     {% endfor %}
     <br /><br />
     </div>
-
+<div id = "portraitbox">
     <p>Dresses:</p>
     <div>
       {% for dress in dressWardrobe %}
@@ -122,10 +157,16 @@
       <p></p>
     {% for dress in dressWardrobe %}
     <input type="radio" name="dressForm" id="dresses" value="{{dress.url}}"/>
-    <label for="dresses">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    <label class = "btns" for="dresses">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    {% endfor %}
+    <p></p>
+    {% for dress in dressWardrobe %}
+    <input type="checkbox" name="{{dress.key.urlsafe()}}" id="myCheck"/>
+    <label class = "btns" for="myCheck">Select Item&emsp; &emsp; &emsp; &ensp; &ensp; &ensp; &emsp; &emsp; &emsp;</label>
     {% endfor %}
     <br /><br />
     </div>
+  </div>
 </form>
 
   </body>
