--- a/WeatherOrNot/templates/calendar.html
+++ b/WeatherOrNot/templates/calendar.html
@@ -1,27 +1,27 @@
 <html>
 <head>
+  <link rel="shortcut icon" href="http://www.free-icons-download.net/images/sun-icon-47359.png">
   <title>Weather or Not</title>
-  <link rel="stylesheet" href="/static/scrollable-horizontal.css"></link>
-  <link rel="stylesheet" href="/static/style.css"
-  <script src = "../static/calendar.js"></script>
+  <link rel="stylesheet" href="/static/style.css"></link>
+  <script src = "../static/addfavs_page.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body background="https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/D8qa-2E/rainy-stormy-darkness-wet-weather-background-depressed-sad-background_bzxjr4x7h__F0000.png">
+<body background="{{background_url}}">
   <nav class="navbar navbar-inverse">
     <ul class = "nav navbar-nav">
       <li><h1 id="headerz">Weather or Not</h1></li>
     </ul>
     <ul class="nav navbar-nav">
       <li id="nav"><a href="/">Home</a></li>
-      <li id="nav"><a href="/wardrobe">Wardrobe</a></li>
+      <li id="nav"><a href="/add_favorite">Wardrobe</a></li>
       <li id="nav"><a href="/add_item">Add to Wardrobe</a></li>
       <li id="nav"><a href="/suggestion">Suggestions</a></li>
-      <li id="nav"><a href="/add_favorite">Add Favorite Outfits</a></li>
-      <li id="nav"><a href="/list_favorite">Favorites!</a></li>
+      <li id="nav"><a href="/laundry">Laundry</a></li>
+      <li id="nav"><a href="/list_favorite">Favorites</a></li>
       <li id="nav"><a href="/calendar">History</a></li>
       <li><a href="http://twitter.com/?status=My outfit is faab!"><img class="img2" src="http://www.anthonysgulfport.com/wp-content/uploads/2014/09/twitter-icon-300x300.png" id="twitter"/></a></li>
       <li><a href="https://www.facebook.com/share.php?u="><img class="img2" src="https://seeklogo.com/images/F/facebook-icon-logo-C61047A9E7-seeklogo.com.png" id="facebook"/></a></li>
