--- a/WeatherOrNot/templates/main_page.html
+++ b/WeatherOrNot/templates/main_page.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="shortcut icon" href="http://www.free-icons-download.net/images/sun-icon-47359.png">
     <link rel="stylesheet" href="/static/style.css"></link>
     <script src="../static/api.js"></script>
     <script src = "../static/main_page.js"></script>
@@ -19,7 +20,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-<body background="https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/D8qa-2E/rainy-stormy-darkness-wet-weather-background-depressed-sad-background_bzxjr4x7h__F0000.png">
+<body background="{{background_url}}">
 
 
   <nav class="navbar navbar-inverse">
@@ -28,11 +29,11 @@
     </ul>
     <ul class="nav navbar-nav">
       <li id="nav"><a href="/">Home</a></li>
-      <li id="nav"><a href="/wardrobe">Wardrobe</a></li>
+      <li id="nav"><a href="/add_favorite">Wardrobe</a></li>
       <li id="nav"><a href="/add_item">Add to Wardrobe</a></li>
       <li id="nav"><a href="/suggestion">Suggestions</a></li>
-      <li id="nav"><a href="/add_favorite">Add Favorite Outfits</a></li>
-      <li id="nav"><a href="/list_favorite">Favorites!</a></li>
+      <li id="nav"><a href="/laundry">Laundry</a></li>
+      <li id="nav"><a href="/list_favorite">Favorites</a></li>
       <li id="nav"><a href="/calendar">History</a></li>
       <li><a href="http://twitter.com/?status=My outfit is faab!"><img class="img2" src="http://www.anthonysgulfport.com/wp-content/uploads/2014/09/twitter-icon-300x300.png" id="twitter"/></a></li>
       <li><a href="https://www.facebook.com/share.php?u="><img class="img2" src="https://seeklogo.com/images/F/facebook-icon-logo-C61047A9E7-seeklogo.com.png" id="facebook"/></a></li>
