Revert "squashing commits"
This reverts commit 3f329e35e7874bd3b69817aa9b21cded4edadbe6.

--- a/WeatherOrNot/templates/ralphs_stuff/Ralph.html
+++ b/WeatherOrNot/templates/ralphs_stuff/Ralph.html
@@ -12,73 +12,49 @@
   </head>
 
   <body>
-    <!-- GRID 1 -->
     <div class='topBar'>
     </div>
-
-    <!-- GRID 2 -->
-    <div class='logo'>
-      <img src="https://99designs-start-attachments.imgix.net/alchemy-pictures/2016%2F02%2F22%2F04%2F24%2F31%2Fb7bd820a-ecc0-4170-8f4e-3db2e73b0f4a%2F550250_artsigma.png?auto=format&ch=Width%2CDPR&w=250&h=250" id='logoForCompany'>
+    <div class='officialMenu'>
+      <h1>Logo</h1>
+      <ul id='menu'>
+            <li><a href="/">Home</a></li>
+            <li><a href="/suggestion">Suggestions</a></li>
+            <li><a href="/wardrobe">Wardrobe</a></li>
+            <li><a href="/add_item">Add Items to Wardrobe</a></li>
+      </ul>
     </div>
+    <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+        <img src="https://wallpapercave.com/wp/wp1866272.jpg" id='clothesHangerDisplay'>
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEX///+nxBvIAAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC" id="whiteBox">
+        <div class='center'> Wardrobe Season </div>
+        <p class='Click'>Click to begin</p>
+        <!-- ENTER ZIP CODE -->
 
-<!-- GRID 3 -->
-    <div class='underTopBar'>
-    <nav class='navNav'>
-      <div class='nav-bar'>
-        <ul id='menu'>
-          <li><a href="/">Home</a></li>
-          <li><a href="/suggestion">Suggestions</a></li>
-          <li><a href="/wardrobe">Wardrobe</a></li>
-          <li><a href="/add_item">Add Items to Wardrobe</a></li> <!--MAKE THIS A BUTTON IN THE WARDROBE BUTTON-->
-          <li><a href="#">Laundry</a></li>
-          <li><a href="#" id='meetTheMakers'>#MEET THE MAKERS</a></li>
-        </ul>
-      </div>
-    </nav>
-    </div>
-
-<!-- GRID 4 -->
-<!-- showcase image with centered text -->
-    <div class='imageWithCenterText'>
-      <img src="https://wallpapercave.com/wp/wp1866272.jpg" id='clothesHangerDisplay'>
-      <!-- <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEX///+nxBvIAAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC" id="whiteBox"> -->
-      <div class='center'>
-        <p class='middleText'>Wardrobe Season </h1>
-        <!-- <h2>Click to begin</h2 -->
-      </div>
-      <!-- <p class='Click'>Click to begin</p> -->
-    </div>
-      <!-- ENTER ZIP CODE -->
-    <!-- src='https://wallpapercave.com/wp/wp1866272.jpg' id='clothesHangerDisplay' -->
-    <!-- SWIPE SLIDER JS
-    HOW TO GET ANIMATIONS ON THE WORDS SO THAT THEY POP UP WHEN YOU OPEN THE SCREEN -->
-
-<!-- GRID 5 -->
-    <div class='underImage'>
-      <p class='punchLine'> Whether it is raining or whether it is snowing,
-        we are here to help choose the perfect outfit. </p>
-    </div>
-
-<!-- GRID 6 WEATHER -->
-
-  <div class='weatherAPIDIV'>
-    <div class='weatherOverAndUnder'></div>
-    <div class='weatherImg'>
-      <img src="https://i.ytimg.com/vi/obclZDUAeSY/maxresdefault.jpg" alt="Snow" style="width:100%; opacity:.6;">
-      <div class="centered">
-        <h3> First Step...</h3>
-        <form method="post" id="nav"><input type="text" name="zip" id="zip" placeholder="Enter Zip Code to Begin"><input type="submit" id="submit" value="Submit"></form>
-      </div>
-    </div>
-    <div class='weatherOverAndUnder'></div>
-  </div>
-
-
-<!-- GRID 7 FOOTER -->
-  <div class='footer'>
-  </div>
-
-    <!-- <div class='belowPicture'><h2>mksjdnvskjnv</h2></div> -->
+    <div class='belowPicture'><h2>mksjdnvskjnv</h2></div>
   </body>
   <!-- menu -->
 
