--- a/WeatherOrNot/templates/index.html
+++ b/WeatherOrNot/templates/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-  <link rel="shortcut icon" href="http://www.free-icons-download.net/images/sun-icon-47359.png">
     <meta charset="UTF-8">
     <title>Imgur-Upload</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,7 @@
     <link rel="shortcut icon" href="./favicon.png">
 </head>
 
-<body background = "{{background_url}}">
+<body>
   <div id="logout">
     <p>{{user_nickname}}</p>
     <a href="{{logoutUrl}}">Log Out</a>
