--- a/WeatherOrNot/templates/wardrobe_page.html
+++ b/WeatherOrNot/templates/wardrobe_page.html
@@ -85,6 +85,42 @@
       </span>
       {% endfor %}
       <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    </div>
+
+    <p>Sweaters:</p>
+    <div>
+      {% for sweater in sweaterWardrobe %}
+      <span class='itemContainer'>
+        Checkbox: <input type="checkbox" id="myCheck" name="{{sweater.key.urlsafe()}}">
+        <img class = "img" src = "{{skirt.url}}" width="500" height="375" />
+
+      </span>
+      {% endfor %}
+      <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    </div>
+
+    <p>Jackets:</p>
+    <div>
+      {% for jacket in jacketWardrobe %}
+      <span class='itemContainer'>
+        Checkbox: <input type="checkbox" id="myCheck" name="{{jacket.key.urlsafe()}}">
+        <img class = "img" src = "{{skirt.url}}" width="500" height="375" />
+
+      </span>
+      {% endfor %}
+      <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    </div>
+
+    <p>Coats:</p>
+    <div>
+      {% for coat in coatWardrobe %}
+      <span class='itemContainer'>
+        Checkbox: <input type="checkbox" id="myCheck" name="{{coat.key.urlsafe()}}">
+        <img class = "img" src = "{{skirt.url}}" width="500" height="375" />
+
+      </span>
+      {% endfor %}
+      <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
       <input type="submit" value="Send to Laundry" name = "toLaundry">
       <input type = "submit" value = "Delete Item" name = "deleteClothing">
     </form>
