changed to lowercase

--- a/WeatherOrNot/templates/suggestions_page/suggestions.html
+++ b/WeatherOrNot/templates/suggestions_page/suggestions.html
@@ -35,25 +35,25 @@
       <a href="{{logoutUrl}}">Log Out</a>
     </div>
 
-    <h1>TOPS</h1>
+    <h1>Tops:</h1>
       <div id="tops"></div>
     <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-    <h1>BOTTOMS</h1>
+    <h1>Bottoms:</h1>
       <div id="bottoms"></div>
     <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-    <h1>SKIRTS</h1>
+    <h1>Skirts:</h1>
       <div id="skirts"></div>
     <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-    <h1>DRESSSES</h1>
+    <h1>Dresses:</h1>
       <div id="dresses"></div>
     <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-    <h1>COATS</h1>
+    <h1>Coats:</h1>
       <div id="coats"></div>
     <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-    <h1>JACKETS</h1>
+    <h1>Jackets:</h1>
       <div id="jackets"></div>
     <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
-    <h1>SWEATERS</h1>
+    <h1>Sweaters:</h1>
       <div id="sweaters"></div>
     <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
   </body>
