--- a/WeatherOrNot/templates/addfavs_page.html
+++ b/WeatherOrNot/templates/addfavs_page.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li id="nav"><a href="/">Home</a></li>
         <li id="nav"><a href="/wardrobe">Wardrobe</a></li>
-        <li id="nav"><a href="/add_item">Add to Wardrobe</a></li>
+        <li id="nav"><a href="/add_Clothing">Add to Wardrobe</a></li>
         <li id="nav"><a href="/suggestion">Suggestions</a></li>
         <li id="nav"><a href="/add_favorite">Add Favorite Outfits</a></li>
         <li id="nav"><a href="/list_favorite">Favorites!</a></li>
@@ -29,103 +29,104 @@
     </nav>
 
     <div id="logout" id="nav">
-      <p id="nav">{{user_nickname}}</p>
+      <p id="nav">{{user_nickname}}</h1>
       <a href="{{logoutUrl}}">Log Out</a>
     </div>
 
 <form method="post">
-<button id ="submit">Submit!</button>
+<button id ="submit">Add to Favorites</button>
 <button id = "worn"> I wore this today! </button>
-      <p>Tops:</p>
+      <h1 class="add_favs">Tops:</h1>
       <div>
         {% for top in topsWardrobe %}
           <img class = "img" src = "{{top.url}}" />
         {% endfor %}
-        <p></p>
+        <h1 class="add_favs"></h1>
       {% for top in topsWardrobe %}
-        <input type="radio" name="topForm" id="tops" value="{{top.url}}"/>
-        <label for="tops">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
+        <input class="add_favs" type="radio" name="topForm" id="tops" value="{{top.url}}"/>
+        <label class="add_favs"  for="tops">Select Clothing &emsp; &emsp; &emsp; &emsp; </label>
       {% endfor %}
       <br /><br />
     </div>
 
-    <p>Bottoms:</p>
+    <h1 class="add_favs">Bottoms:</h1>
     <div>
       {% for pant in pantsWardrobe %}
         <img class = "img" src= "{{pant.url}}" />
       {% endfor %}
-      <p></p>
+      <h1 class="add_favs"></h1>
     {% for pant in pantsWardrobe %}
-      <input type="radio" name="bottomForm" id="bottoms" value="{{pant.url}}"/>
-      <label for="bottoms">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
+      <input class="add_favs" type="radio" name="bottomForm" id="bottoms" value="{{pant.url}}"/>
+      <label class="add_favs"  for="bottoms">Select Clothing &emsp; &emsp; &emsp; &emsp;</label>
     {% endfor %}
     <br /><br />
     </div>
 
-    <p>Skirts:</p>
+    <h1 class="add_favs">Skirts:</h1>
     <div>
       {% for skirt in skirtWardrobe %}
         <img class = "img" src= "{{skirt.url}}" />
       {% endfor %}
-      <p> </p>
+      <h1 class="add_favs"> </h1>
     {% for skirt in skirtWardrobe %}
-    <input type="radio" name="skirtForm" id="skirts" value="{{skirt.url}}"/>
-    <label for="skirts">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp;</label>
+    <input class="add_favs" type="radio" name="skirtForm" id="skirts" value="{{skirt.url}}"/>
+    <label class="add_favs"  for="skirts">Select Clothing &emsp; &emsp; &emsp; &emsp; </label>
     {% endfor %}
     <br /><br />
     </div>
-
-    <p>Sweaters:</p>
-    <div>
-      {% for sweater in sweaterWardrobe %}
-        <img class = "img" src= "{{sweater.url}}" />
-      {% endfor %}
-      <p> </p>
-    {% for sweater in sweaterWardrobe %}
-    <input type="radio" name="sweaterForm" id="sweaters" value="{{sweater.url}}"/>
-    <label for="sweaters">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
-    {% endfor %}
-    <br /><br />
-    </div>
-
-    <p>Coats:</p>
-    <div>
-      {% for coat in coatWardrobe %}
-        <img class = "img" src= "{{coat.url}}" />
-      {% endfor %}
-      <p> </p>
-    {% for coat in coatWardrobe %}
-    <input type="radio" name="coatForm" id="coats" value="{{coat.url}}"/>
-    <label for="coats">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
-    {% endfor %}
-    <br /><br />
-    </div>
-
-    <p>Jackets:</p>
-    <div>
-      {% for jacket in jacketWardrobe %}
-        <img class = "img" src= "{{jacket.url}}" />
-      {% endfor %}
-      <p> </p>
-    {% for jacket in jacketWardrobe %}
-    <input type="radio" name="jacketForm" id="jackets" value="{{jacket.url}}"/>
-    <label for="jackets">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
-    {% endfor %}
-    <br /><br />
-    </div>
-
-    <p>Dresses:</p>
+    <h1 class="add_favs">Dresses:</h1>
     <div>
       {% for dress in dressWardrobe %}
         <img class = "img" src= "{{dress.url}}" />
       {% endfor %}
-      <p></p>
+      <h1 class="add_favs"></h1>
     {% for dress in dressWardrobe %}
-    <input type="radio" name="dressForm" id="dresses" value="{{dress.url}}"/>
-    <label for="dresses">Add to Favorites &emsp; &emsp; &emsp; &emsp; &emsp; </label>
+    <input class="add_favs" type="radio" name="dressForm" id="dresses" value="{{dress.url}}"/>
+    <label class="add_favs"  for="dresses">Select Clothing &emsp; &emsp; &emsp; &emsp; </label>
     {% endfor %}
     <br /><br />
     </div>
+
+    <h1 class="add_favs">Sweaters:</h1>
+    <div>
+      {% for sweater in sweaterWardrobe %}
+        <img class = "img" src= "{{sweater.url}}" />
+      {% endfor %}
+      <h1 class="add_favs"> </h1>
+    {% for sweater in sweaterWardrobe %}
+    <input class="add_favs" type="radio" name="sweaterForm" id="sweaters" value="{{sweater.url}}"/>
+    <label class="add_favs"  for="sweaters">Select Clothing &emsp; &emsp; &emsp; &emsp; </label>
+    {% endfor %}
+    <br /><br />
+    </div>
+    <h1 class="add_favs">Jackets:</h1>
+    <div>
+      {% for jacket in jacketWardrobe %}
+        <img class = "img" src= "{{jacket.url}}" />
+      {% endfor %}
+      <h1 class="add_favs"> </h1>
+    {% for jacket in jacketWardrobe %}
+    <input class="add_favs" type="radio" name="jacketForm" id="jackets" value="{{jacket.url}}"/>
+    <label class="add_favs"  for="jackets">Select Clothing &emsp; &emsp; &emsp; &emsp;</label>
+    {% endfor %}
+    <br /><br />
+    </div>
+    <h1 class="add_favs">Coats:</h1>
+    <div>
+      {% for coat in coatWardrobe %}
+        <img class = "img" src= "{{coat.url}}" />
+      {% endfor %}
+      <h1 class="add_favs"> </h1>
+    {% for coat in coatWardrobe %}
+    <input class="add_favs" type="radio" name="coatForm" id="coats" value="{{coat.url}}"/>
+    <label class="add_favs"  for="coats">Select Clothing &emsp; &emsp; &emsp; &emsp;</label>
+    {% endfor %}
+    <br /><br />
+    </div>
+
+
+
+
 </form>
 
   </body>
