--- a/WeatherOrNot/templates/wardrobe_page.html
+++ b/WeatherOrNot/templates/wardrobe_page.html
@@ -34,7 +34,7 @@
 
     <div id="image_wrap">
     <form method='post'>
-      <p>Tops:</p>
+      <p id = "header">Tops:</p>
       {% for top in topsWardrobe %}
           <img class = "img" src = "{{top.url}}" />
       {% endfor %}
