--- a/WeatherOrNot/static/style.css
+++ b/WeatherOrNot/static/style.css
@@ -7,7 +7,7 @@
     background-size:     cover;
 }
 .add_favs{
-  color:white;
+  color:black;
   font-family:Futura;
 }
 body {
@@ -38,7 +38,7 @@ body {
 }
 #nav{
   font-family:Futura;
-  color:white;
+  color:black;
   font-size:18px;
 }
 
