--- a/WeatherOrNot/static/style.css
+++ b/WeatherOrNot/static/style.css
@@ -22,14 +22,14 @@ body {
   font-weight: 900;
   margin-left: 10px;
   font-family:Futura;
-  color:white;
+  color:WHITE;
 }
 #header{
   font-size:30px;
   font-weight: 900;
   margin-left: 10px;
   font-family:Futura;
-  color: white;
+  color: black;
 }
 #submit{
   color:black;
