--- a/WeatherOrNot/templates/addfavs_page.html
+++ b/WeatherOrNot/templates/addfavs_page.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="/static/addfavs_page.js"></script>
+    <link rel="shortcut icon" href="http://files.softicons.com/download/web-icons/vector-stylish-weather-icons-by-bartosz-kaszubowski/ico/sun.rays.medium.ico">
     <title>Wardrobe</title>
     <link rel="stylesheet" href="/static/style.css"></link>
     <meta charset="utf-8">
@@ -21,7 +22,6 @@
         <li id="nav"><a href="/suggestion">Suggestions</a></li>
         <li id="nav"><a href="/add_favorite">Add Favorite Outfits</a></li>
         <li id="nav"><a href="/list_favorite">Favorites!</a></li>
-        <li id="nav"><a href="/calendar">History</a></li>
         <li><a href="http://twitter.com/?status=My outfit is faab!"><img class="img2" src="http://www.anthonysgulfport.com/wp-content/uploads/2014/09/twitter-icon-300x300.png" id="twitter"/></a></li>
         <li><a href="https://www.facebook.com/share.php?u="><img class="img2" src="https://seeklogo.com/images/F/facebook-icon-logo-C61047A9E7-seeklogo.com.png" id="facebook"/></a></li>
         <li><a href="https://www.instagram.com"><img class="img2" src="https://instagram-brand.com/wp-content/uploads/2016/11/app-icon2.png" id="instagram"/></a></li>
@@ -35,7 +35,6 @@
 
 <form method="post">
 <button id ="submit">Add to Favorites</button>
-<button id = "worn"> I wore this today! </button>
       <h1 class="add_favs">Tops:</h1>
       <div>
         {% for top in topsWardrobe %}
