--- a/WeatherOrNot/templates/suggestions_page/suggestions.html
+++ b/WeatherOrNot/templates/suggestions_page/suggestions.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="shortcut icon" href="http://files.softicons.com/download/web-icons/vector-stylish-weather-icons-by-bartosz-kaszubowski/ico/sun.rays.medium.ico">
     <title>Our Suggestions</title>
     <link rel="stylesheet" href="/static/style.css"></link>
     <script src="/static/api.js"></script>
@@ -23,7 +24,6 @@
         <li id="nav"><a href="/suggestion">Suggestions</a></li>
         <li id="nav"><a href="/add_favorite">Add Favorite Outfits</a></li>
         <li id="nav"><a href="/list_favorite">Favorites!</a></li>
-        <li id="nav"><a href="/calendar">History</a></li>
         <li><a href="http://twitter.com/?status=My outfit is faab!"><img class="img2" src="http://www.anthonysgulfport.com/wp-content/uploads/2014/09/twitter-icon-300x300.png" id="twitter"/></a></li>
         <li><a href="https://www.facebook.com/share.php?u="><img class="img2" src="https://seeklogo.com/images/F/facebook-icon-logo-C61047A9E7-seeklogo.com.png" id="facebook"/></a></li>
         <li><a href="https://www.instagram.com"><img class="img2" src="https://instagram-brand.com/wp-content/uploads/2016/11/app-icon2.png" id="instagram"/></a></li>
@@ -37,25 +37,25 @@
 
     <h1 class = "add_favs">Tops:</h1>
       <div id="tops"></div>
-    <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    <p></p>
     <h1 class = "add_favs">Bottoms:</h1>
       <div id="bottoms"></div>
-    <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    <p></p>
     <h1 class = "add_favs">Skirts:</h1>
       <div id="skirts"></div>
-    <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    <p></p>
     <h1 class = "add_favs">Dresses:</h1>
       <div id="dresses"></div>
-    <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    <p></p>
     <h1 class = "add_favs">Sweaters:</h1>
       <div id="sweaters"></div>
-    <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    <p></p>
     <h1 class = "add_favs">Jackets:</h1>
       <div id="jackets"></div>
-    <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    <p></p>
     <h1 class = "add_favs">Coats:</h1>
       <div id="coats"></div>
-    <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+    <p></p>
 
   </body>
 
