--- a/WeatherOrNot/templates/calendar.html
+++ b/WeatherOrNot/templates/calendar.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Weather or Not</title>
-  <link rel="stylesheet" href="/static/scrollable-horizontal.css"></link>
+  <link rel="shortcut icon" href="http://files.softicons.com/download/web-icons/vector-stylish-weather-icons-by-bartosz-kaszubowski/ico/sun.rays.medium.ico">
   <link rel="stylesheet" href="/static/style.css"
   <script src = "../static/calendar.js"></script>
   <meta charset="utf-8">
@@ -22,7 +22,6 @@
       <li id="nav"><a href="/suggestion">Suggestions</a></li>
       <li id="nav"><a href="/add_favorite">Add Favorite Outfits</a></li>
       <li id="nav"><a href="/list_favorite">Favorites!</a></li>
-      <li id="nav"><a href="/calendar">History</a></li>
       <li><a href="http://twitter.com/?status=My outfit is faab!"><img class="img2" src="http://www.anthonysgulfport.com/wp-content/uploads/2014/09/twitter-icon-300x300.png" id="twitter"/></a></li>
       <li><a href="https://www.facebook.com/share.php?u="><img class="img2" src="https://seeklogo.com/images/F/facebook-icon-logo-C61047A9E7-seeklogo.com.png" id="facebook"/></a></li>
       <li><a href="https://www.instagram.com"><img class="img2" src="https://instagram-brand.com/wp-content/uploads/2016/11/app-icon2.png" id="instagram"/></a></li>
