--- a/WeatherOrNot/templates/index.html
+++ b/WeatherOrNot/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Imgur-Upload</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="http://files.softicons.com/download/web-icons/vector-stylish-weather-icons-by-bartosz-kaszubowski/ico/sun.rays.medium.ico">
     <link href="./css/style.css" rel="stylesheet" media="screen">
     <link href="./css/mobile-style.css" rel="stylesheet" media="screen">
     <link rel="shortcut icon" href="./favicon.png">
