--- a/WeatherOrNot/templates/main_page.html
+++ b/WeatherOrNot/templates/main_page.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/static/style.css"></link>
+    <link rel="shortcut icon" href="http://files.softicons.com/download/web-icons/vector-stylish-weather-icons-by-bartosz-kaszubowski/ico/sun.rays.medium.ico">
     <script src="../static/api.js"></script>
     <script src = "../static/main_page.js"></script>
     <style>
@@ -33,7 +34,6 @@
       <li id="nav"><a href="/suggestion">Suggestions</a></li>
       <li id="nav"><a href="/add_favorite">Add Favorite Outfits</a></li>
       <li id="nav"><a href="/list_favorite">Favorites!</a></li>
-      <li id="nav"><a href="/calendar">History</a></li>
       <li><a href="http://twitter.com/?status=My outfit is faab!"><img class="img2" src="http://www.anthonysgulfport.com/wp-content/uploads/2014/09/twitter-icon-300x300.png" id="twitter"/></a></li>
       <li><a href="https://www.facebook.com/share.php?u="><img class="img2" src="https://seeklogo.com/images/F/facebook-icon-logo-C61047A9E7-seeklogo.com.png" id="facebook"/></a></li>
       <li><a href="https://www.instagram.com"><img class="img2" src="https://instagram-brand.com/wp-content/uploads/2016/11/app-icon2.png" id="instagram"/></a></li>
