--- a/WeatherOrNot/templates/upload-images/index.html
+++ b/WeatherOrNot/templates/upload-images/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="/static/style.css"></link>
+  <link rel="shortcut icon" href="https://images.vexels.com/media/users/3/145136/isolated/preview/94a70b169da2d2f32dc34ead9122ef2d-sun-sharp-rays-big-icon-by-vexels.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/upload-images/style.css" rel="stylesheet" media="screen">
