--- a/WeatherOrNot/templates/calendar.html
+++ b/WeatherOrNot/templates/calendar.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Weather or Not</title>
-  <link rel="shortcut icon" href="http://files.softicons.com/download/web-icons/vector-stylish-weather-icons-by-bartosz-kaszubowski/ico/sun.rays.medium.ico">
+  <link rel="shortcut icon" href="https://images.vexels.com/media/users/3/145136/isolated/preview/94a70b169da2d2f32dc34ead9122ef2d-sun-sharp-rays-big-icon-by-vexels.png">
   <link rel="stylesheet" href="/static/style.css"
   <script src = "../static/calendar.js"></script>
   <meta charset="utf-8">
