--- a/WeatherOrNot/templates/main_page.html
+++ b/WeatherOrNot/templates/main_page.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/static/style.css"></link>
-    <link rel="shortcut icon" href="http://files.softicons.com/download/web-icons/vector-stylish-weather-icons-by-bartosz-kaszubowski/ico/sun.rays.medium.ico">
+    <link rel="shortcut icon" href="https://images.vexels.com/media/users/3/145136/isolated/preview/94a70b169da2d2f32dc34ead9122ef2d-sun-sharp-rays-big-icon-by-vexels.png">
     <script src="../static/api.js"></script>
     <script src = "../static/main_page.js"></script>
     <style>
