--- a/WeatherOrNot/templates/suggestions_page/suggestions.html
+++ b/WeatherOrNot/templates/suggestions_page/suggestions.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <link rel="shortcut icon" href="http://files.softicons.com/download/web-icons/vector-stylish-weather-icons-by-bartosz-kaszubowski/ico/sun.rays.medium.ico">
+    <link rel="shortcut icon" href="https://images.vexels.com/media/users/3/145136/isolated/preview/94a70b169da2d2f32dc34ead9122ef2d-sun-sharp-rays-big-icon-by-vexels.pngn">
     <title>Our Suggestions</title>
     <link rel="stylesheet" href="/static/style.css"></link>
     <script src="/static/api.js"></script>
